--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -1,11 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>vivek</h1>
+    <div id="wrapper">
+        <div class="container">
+
+
+            <div class="navbar">
+                <h2>Welcome to landing page</h2>
+            </div>
+            <div class="header">
+                <div class="header-title">
+                    <h2>LANDING PAGE</h2>
+                </div>
+                <div class="list">
+                    <div class="list-item">
+                        <h3>Home</h3>
+                        <div class="line"></div>
+                    </div>
+                    <div class="list-item">
+                        <h3>Blog</h3>
+                        <div class="line"></div>
+                    </div>
+                    <div class="list-item">
+                        <h3>Page</h3>
+                        <div class="line"></div>
+                    </div>
+                    <div class="list-item">
+                        <h3>Services</h3>
+                        <div class="line"></div>
+                    </div>
+                    <div class="list-item">
+                        <h3>Testimonial</h3>
+                        <div class="line"></div>
+                    </div>
+                    <div class="list-item">
+                        <h3>Contact</h3>
+                        <div class="line"></div>
+                    </div>
+                    <div class="list-item">
+                        <h3>Buy Now</h3>
+                        <div class="line"></div>
+                    </div>
+                </div>
+                <div class="search">Search</div>
+            </div>
+
+            <div class="hero-section">
+                <img class="hero-image" src="./assets//hero2.avif" />
+            </div>
+
+            <div class="hero-bottom">
+                <div class="text">
+                    <h1>Launch Business</h1>
+                    <p>Lauch your businesss </p>
+                </div>
+                <div class="text">
+                    <h1>Online support Team</h1>
+                    <p>We Provide online support to the user </p>
+                </div>
+                <div class="text">
+                    <h1>Time Management</h1>
+                    <p>Time management</p>
+                </div>
+            </div>
+
+
+            <div class="hero-section2">
+                <div class="hero-section2-left">
+                    <h1>About Us</h1>
+                    <div class="about-line"></div>
+                    <h2>15 years, we passionate about achieving better results for our clients</h2>
+                    <p>Welcome to xyz company, a hub of innovation and excellence in the business world. We're committed
+                        to pushing boundaries and reshaping industries through creative solutions and strategic
+                        partnerships. With a customer-centric approach, we prioritize delivering value and exceeding
+                        expectations. Our dynamic team thrives on challenges, leveraging expertise to navigate
+                        complexities and drive sustainable growth. At [Your Company Name], integrity is at the core of
+                        everything we do, ensuring that every interaction is grounded in trust and transparency. Join us
+                        as we continue to pioneer new paths and make a lasting impact on the business landscape.</p>
+                    <button class="btn">READ MORE</button>
+                </div>
+                <div class="hero-section2-right">
+                    <img src="./assets/person.avif" />
+                </div>
+            </div>
+
+            <div class="footer">
+                <div class="services">
+                    <h1>Services</h1>
+                    <div class="about-line"></div>
+                    <p>At xyz company, we offer a comprehensive suite of services tailored to meet your business needs.
+                        From strategic consulting and digital marketing to innovative product development, we're
+                        dedicated to empowering your growth and success. Trust us to be your partner in achieving your
+                        business objectives.</p>
+                </div>
+
+                <div class="image-section">
+                    <div class="footer-image">
+                    <img class="image" src="./assets/user-experience.jpeg" />
+                    <button class="btn2">Know more</button>
+                    </div>
+
+                    <div class="footer-image">
+                    <img class="image" src="./assets/creative-design.jpeg" />
+                    <button class="btn2">Know more</button>
+                </div>
+
+                    <div class="footer-image">
+                    <img class="image" src="./assets/stocks.jpg" />
+                    <button class="btn2">Know more</button>
+                </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
 </body>
+
 </html>
