--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -14,7 +14,7 @@
 
 
             <div class="navbar">
-                <h2>Welcome to landing page</h2>
+                <h2>Welcome</h2>
             </div>
             <div class="header">
                 <div class="header-title">
@@ -105,7 +105,7 @@
                 <div class="image-section">
                     <div class="footer-image">
                     <img class="image" src="./assets/user-experience.jpeg" />
-                    <button class="btn2">Know more</button>
+                    <button class="btn">Know more</button>
                     </div>
 
                     <div class="footer-image">
