--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -181,7 +181,7 @@
 
         <div id="skills" class="skills-section">
             <h2 class="skills-heading">Skills</h2>
-            <div  class="skills-container">
+            <div class="skills-container">
                 <div class="skill">
                     <h2>HTML</h2>
                     <div style="width: 100%;" class="skill-line"></div>
@@ -215,8 +215,10 @@
         <div id="contact" class="contact-section">
             <h2 class="contact-heading">Contact Us</h2>
             <div class="contact-container">
-                <p>Have a project idea in mind? Looking to collaborate on something exciting? Or maybe you just want to chat about all things tech? Whatever it may be, I'd love to hear from you!</p>
-                <p>Feel free to drop me a message using the form given on right side, and I'll get back to you as soon as possible. Let's turn ideas into reality and create something amazing together!</p>
+                <p>Have a project idea in mind? Looking to collaborate on something exciting? Or maybe you just want to
+                    chat about all things tech? Whatever it may be, I'd love to hear from you!</p>
+                <p>Feel free to drop me a message using the form given on right side, and I'll get back to you as soon
+                    as possible. Let's turn ideas into reality and create something amazing together!</p>
                 <a href="mailto:mishravivek9569@gmail.com">Send Email</a>
                 <p>Address : Greater Noida</p>
             </div>
@@ -230,7 +232,7 @@
                 <p>Contact Us</p>
             </div>
         </footer>
-        
+
     </div>
 </body>
 
